<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="66dp"
        android:text="@string/Sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/pink_beauty"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeTxt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_textbox_style"
                android:ems="10"
                android:hint="@string/Email_Hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_textbox_style"
                android:ems="10"
                android:hint="@string/Pass_Hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnSigIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/pink_beauty"
                android:text="@string/loginBtn_text"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_color"
                android:text="@string/Sign_Up"
                android:textColor="@color/white"
                android:textSize="16dp"
                tools:visibility="visible" />

            <Button
                android:id="@+id/gSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow_color"
                android:text="@string/gSignIn_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>