<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".signUpActivity">

    <TextView
        android:id="@+id/SignUpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="66dp"
        android:text="@string/Sign_Up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_color"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTxt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:hint="@string/Name_Hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/mailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:hint="@string/Email_Hint"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/passBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:hint="@string/Pass_Hint"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/signupbtn_style"
                android:theme="@style/purple_color"
                android:text="@string/Sign_Up"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginbtn_style"
                android:theme="@style/pink_beauty"
                android:text="@string/regUser_text"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>